# email-assistant

./: .coverage  .env  .env-example  .gitignore  .pylintrc  README.md  config.py  docker-compose.yml  dockerfile  env-example  makefile  pyproject.toml  test.docker-compose.yml
alembic/: env.py
alembic/versions/: 73bea8db01c2_initial_migration.py
app/: chatgpt_client.py  db.py  email_client.py  email_sync.py  factories.py  main.py  models.py  openai_client.py  settings.py  shopify_client.py
app/routes/: ai_actions.py  emails.py  shopify.py
app/tests/: conftest.py  test_chatgpt_client.py  test_email_sync.py  test_example.py  test_openai_client_api.py  test_openai_client_module.py  test_shopify_client.py  test_shopify_client_api.py  test_shopify_client_module.py
frontend/: dockerfile  next.config.mjs  package.json  vite.config.js
frontend/app/: layout.jsx  page.jsx
frontend/app/components/: MaildeskApp.jsx  MaildeskAppOld.jsx
